--- a/weekly-reports/2023_11_02report.md
+++ b/weekly-reports/2023_11_02report.md
@@ -1,11 +1,19 @@
 # Report 10 - Week of 11/02/2023 #
 
-### This week, I finished building MINI ME on ZeroWidth and edited the presentation video for MINI ME. 
-I have done:
-1. Learnt Zerowitch with follow-along tutorial by Peter Binggeser of ZeroWidth during Monday's TDF class
-2. Watched the overview of ZeroWitch design toolkit for AI -https://www.youtube.com/watch?v=uC1_HnSn0vc
-3. Had my first try on the ZeroWitch with the TDF syllabus
+### 👋 Hi. Welcome to the documentation of Mini Yuhe's birth log, a digital counterpart and creative extension of Yuhe Niu. This log serves as a journey through Mini Yuhe's inception, development, and evolution, offering insights into the application of ZeroWidth and LLMs.
 
 ---
+## 🔗. Links
+Link to Youtube Video: https://youtu.be/mBVrlUTcI78
 
-## Introduction of the Project ##
+Link to demonstration: https://zerowidth.ai/c/demo/IUlUqROhfn55tZi98CY0/draft
+
+---
+## 🧩 . Structure
+
+In order to make the following demonstration easier to understand. I want to introduce the structure of my LLM first.
+
+Here is the screenshot of my ZeroWidth Workspace. There are one Intelligence named ` NN’s Journal Log`, and there are three Knowledge Sets called `NN_Info` ,`NN’s Project 1`, and `NN’s Project 2` . 
+
+
+In my `NN’s Journal Log` Intelligence, I've organized four instructions, including a welcome message, an overview about me (with a linked 'name' variable), and brief introductions to Project 1 and Project 2. 
