--- a/weekly-reports/2023_11_02report.md
+++ b/weekly-reports/2023_11_02report.md
@@ -17,3 +17,60 @@ Here is the screenshot of my ZeroWidth Workspace. There are one Intelligence nam
 
 
 In my `NN’s Journal Log` Intelligence, I've organized four instructions, including a welcome message, an overview about me (with a linked 'name' variable), and brief introductions to Project 1 and Project 2. 
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-9/mainpage.png" width="700">
+   </p>
+
+In my `NN’s Journal Log` Intelligence, I've organized four instructions, including a welcome message, an overview about me (with a linked 'name' variable), and brief introductions to Project 1 and Project 2. 
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-9/instruction.png" width="700">
+   </p>
+
+Complementing this, I've established three distinct knowledge sets: one detailing my personal information (`NN_Info`), and the other two each providing around 10 specific pieces of information about Projects 1 and 2, respectively (`NN’s Project 1`, and `NN’s Project 2`). Each information is basically a sub-section of my PDF project report. By using this methods, I successfully limited the tokens of each information to around 250-300 tokens, which also turned out to work perfectly fine in the demo’s API (the Chat Bot never gave me error of using too many tokens in demo).
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-9/Information.png" width="700">
+   </p>
+
+These knowledge sets are directly linked to the corresponding instructions for seamless integration. The following image shows the whole picture of my structure.
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-9/Cover Page.jpg" width="700">
+   </p>
+
+---
+## 🤯 Challenge Level 
+
+Challenge Level: 01-Triceratops
+I chose the simplest level because this is a rather short project and LLM is the most unfamiliar topic for me so far. The challenges I encountered during this project are:
+1. Effectively structure the database within limited tokens
+2. Navigate between Intelligence and Knowledge Set and understand their relationship
+3. Adjusting variables such as similarity threshold and temperature to control the output of Chat Bot and how much information was correctly pulled out
+
+---
+
+## 📄. Documentations of the Process
+
+I have explored 4 aspects of LLMs parameters in ZeroWidth:
+1. The construction of information in Knowledge Set
+2. How to better guide user in API to ask the right questions by constructing the welcome message and other instructions right
+3. Adjust Similarity Threshold
+4. Adjust Temperature
+
+### 1.  Construct & Link Knowledge Set
+
+I had experimented with two options to input the information in Knowledge Set.
+The first involved manually entering each piece of data, which I did for the basic information knowledge set (`NN_Info`).
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-9/infomation_2" width="700">
+   </p>
+
+The second option was to upload the PDF reports containing all the details of the two projects and let ZeroWidth automatically generate the information pieces. 
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-9/information_3" width="700">
+  <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-9/information_4" width="700">
+   </p>
