--- a/weekly-reports/2023_11_02report.md
+++ b/weekly-reports/2023_11_02report.md
@@ -1,4 +1,4 @@
-<img width="1547" alt="Instruction_P1" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/assets/143039205/15737e3f-8dd4-4473-9e73-cadab73cd845"># Report 10 - Week of 11/02/2023 #
+# Report 10 - Week of 11/02/2023 #
 
 ### 👋 Hi. Welcome to the documentation of Mini Yuhe's birth log, a digital counterpart and creative extension of Yuhe Niu. This log serves as a journey through Mini Yuhe's inception, development, and evolution, offering insights into the application of ZeroWidth and LLMs.
 
