--- a/weekly-reports/2023_11_16report.md
+++ b/weekly-reports/2023_11_16report.md
@@ -1,1 +1,13 @@
+# Report 12 - Week of 11/16/2023 #
 
+### During this week, I formed the team with Xinyu and Carina for Project 4, and we have decided on several stuffs:
+1. I formed the team with Xinyu and Carina for the Project 4.
+2. We decided on a theme for the Project 4. Instead of doing the original Emo Projector, we decided to create a device that captures verbal dream descriptions and uses AI to generate corresponding narratives and visual illustrations for user’s to transform fleeting dreams, akin to the symbolism of a dreamcatcher, into a painted form using the power of AI in an intuitive way, and convert them into stories that can be preserved.  
+3. Because the nature of our project of capturing dreams, we name our project as `Dreamweaver`.
+4. We met with Jeff to discuss the technical challenges of our project. The following image illustrates the workflow we talked about. And I'm going to explain more about the workflow in the following section.
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-11/whiteboard.jpg" width="1000">
+   </p>
+
+## Technological Workflow
