--- a/weekly-reports/2023_11_16report.md
+++ b/weekly-reports/2023_11_16report.md
@@ -1,6 +1,6 @@
 # Report 12 - Week of 11/16/2023 #
 
-### During this week, I formed the team with Xinyu and Carina for Project 4, and we have decided on several stuffs:
+### During this week, I formed the team with Xinyu and Carina for Project 4, and we have worked on several stuffs:
 1. I formed the team with Xinyu and Carina for the Project 4.
 2. We decided on a theme for the Project 4. Instead of doing the original Emo Projector, we decided to create a device that captures verbal dream descriptions and uses AI to generate corresponding narratives and visual illustrations for user’s to transform fleeting dreams, akin to the symbolism of a dreamcatcher, into a painted form using the power of AI in an intuitive way, and convert them into stories that can be preserved.  
 3. Because the nature of our project of capturing dreams, we name our project as `Dreamweaver`.
