--- a/weekly-reports/2023_11_16report.md
+++ b/weekly-reports/2023_11_16report.md
@@ -10,4 +10,38 @@
    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-11/whiteboard.jpg" width="1000">
    </p>
 
+---
 ## Technological Workflow
+1. Photon as Voice Recorder and record the user's dream.
+2. Photon sends voice data to Python in wav format.
+3. Python turns voice into speech with OpenAI
+4. Python sends the user's speech to ChatGPT.
+5. Train CahtGPT with a specific system message to generate a 100-word short stroy and a prompt for DALL.E with consistent style and format. 
+6. ChatGPT generates the corresponding story and pormpt for DALL.E
+7. ChatGPT sends the message back to Python. Python sends DALL.E pormpt to DALL.E
+8. Python receives the coded image from DALL.E and decoded as jpeg image.
+9. ChatGPT sends the 100-word story to a text-to-speech API and receives the voiceover as a mp3
+10. Python controls the laptop to display the DALL.E image and plays its corresponding story together.
+
+---
+
+## Task Allocation
+
+Physical Computing Development: Includes soldering, wiring, coding, and testing of the hardware. (Xinyu & Carina & Yuhe)
+Prototype Development: Designing of the product form, 3D printing of the prototype, Refining and Polishing. (Carina & Xinyu)
+Software Development: Training of the AI model and integration with the hardware. (Carina & Yuhe)
+Integration Development: Coding for interaction within the entire ecosystem and the device. (Yuhe & Xinyu) 
+Testing and Refinement: Both hardware and software will undergo rigorous testing to ensure reliability and user-friendliness. (Yuhe & Xinyu & Carina)
+
+Yuhe (Nancy)
+- Write the Python code for the program
+- Work out all the connection between Python and LLMs (ChatGPT and DALL.E)
+
+Carina
+- Train the system message for ChatGPT and DALL.E
+- Design and 3D print the exterior look of the dreamweaver
+
+Xinyu
+- Write the Particle code for the voice recorder for Photon
+- Solve out the wireless connection between laptop and Photon
+
