--- a/weekly-reports/2023_11_16report.md
+++ b/weekly-reports/2023_11_16report.md
@@ -16,9 +16,9 @@
 2. Photon sends voice data to Python in wav format.
 3. Python turns voice into speech with OpenAI
 4. Python sends the user's speech to ChatGPT.
-5. Train CahtGPT with a specific system message to generate a 100-word short stroy and a prompt for DALL.E with consistent style and format. 
-6. ChatGPT generates the corresponding story and pormpt for DALL.E
-7. ChatGPT sends the message back to Python. Python sends DALL.E pormpt to DALL.E
+5. Train ChatGPT with a specific system message to generate a 100-word short stroy and a prompt for DALL.E with consistent style and format. 
+6. ChatGPT generates the corresponding story and prompt for DALL.E
+7. ChatGPT sends the message back to Python. Python sends DALL.E prompt to DALL.E
 8. Python receives the coded image from DALL.E and decoded as jpeg image.
 9. ChatGPT sends the 100-word story to a text-to-speech API and receives the voiceover as a mp3
 10. Python controls the laptop to display the DALL.E image and plays its corresponding story together.
