--- a/weekly-reports/2023_11_23report.md
+++ b/weekly-reports/2023_11_23report.md
@@ -41,4 +41,10 @@ The following is the python code to call the ChatGPT API:
    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-12/code_3.png" width="1000">
    </p>
 
+And here is an example of the feedback received from the ChatGPT:
+
+ <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-12/code_4.png" width="1000">
+   </p>
+
   <br>
